[gd_scene load_steps=5 format=3 uid="uid://crwipqkebweam"]

[ext_resource type="Script" path="res://src/UI/Dialog Settings/Scripts/Quest Avaiability.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://b3h2bvwm0hbhp" path="res://src/UI/Dialog Settings/ChooseQuest.tscn" id="2"]
[ext_resource type="Theme" uid="uid://hgc7wambejk3" path="res://Assets/MainEditor.tres" id="3"]

[sub_resource type="StyleBoxEmpty" id="1"]

[node name="Quest Avaiability" type="Control"]
custom_minimum_size = Vector2(350, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 435.0
offset_bottom = 50.0
theme = ExtResource("3")
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(435, 50)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 35.0
theme_override_styles/panel = SubResource("1")

[node name="ChooseQuest" parent="Panel" instance=ExtResource("2")]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = -10.0
offset_right = 54.0
offset_bottom = 10.0
text = "SELECT_QUEST"

[node name="OptionButton" type="OptionButton" parent="Panel"]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -9.5
offset_right = 128.0
offset_bottom = 9.5
alignment = 1
text_overrun_behavior = 1
clip_text = true
item_count = 7
popup/item_0/text = "AV_ALWAYS"
popup/item_0/id = 0
popup/item_1/text = "AV_AFTER"
popup/item_1/id = 1
popup/item_2/text = "AV_BEFORE"
popup/item_2/id = 2
popup/item_3/text = "AV_WHEN_ACTIVE"
popup/item_3/id = 3
popup/item_4/text = "AV_WHEN_NOT_ACTIVE"
popup/item_4/id = 4
popup/item_5/text = "AV_COMPLETE"
popup/item_5/id = 5
popup/item_6/text = "AV_CANSTART"
popup/item_6/id = 6

[node name="SpinBox" type="SpinBox" parent="Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -9.0
offset_right = -74.0
offset_bottom = 23.0
grow_horizontal = 0
grow_vertical = 2
min_value = -1.0
max_value = 10000.0
value = -1.0
prefix = "ID:"

[connection signal="quest_chosen" from="Panel/ChooseQuest" to="." method="_on_ChooseQuest_quest_chosen"]
[connection signal="item_selected" from="Panel/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="Panel/SpinBox" to="." method="_on_SpinBox_value_changed"]
